--- a/main.html
+++ b/main.html
@@ -6,8 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-	<!-- the entire body must be written by student -->
+ 	<!-- the entire body must be written by student -->
+	<input type="text" id="evaluatedText"><br>
+	<h3 id="letterCount">0</h3><br>
+	<button id="">Count</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
