--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
- 	<!-- the entire body must be written by student -->
-	<input type="text" id="evaluatedText"><br>
-	<h3 id="letterCount">0</h3><br>
-	<button id="">Count</button>
+<body>
+	<!-- the entire body must be written by student -->
+	<textarea id="evaluatedText" name="message" onkeyup="countChars(this);"></textarea>
+<h3 id="letterCount">0</h3>
     <script type="text/javascript" src="./script.js">
 </script>
 
